---------------------------------------------------------------------------------------------------
Version: 1.8.4
Date: ???
  Bugfixes:
    - Fixed being able to toggle into a spidertron in editor mode or Space Exploration's star map
    - Fixed 'Call last used spidertron' shortcut being enabled before any interactions with spidertrons
---------------------------------------------------------------------------------------------------
Version: 1.8.3
Date: 17 February 2022
  Bugfixes:
    - Fixed 'Tips & Tricks' simulation (requires 'Simulation Helper' mod to view)
  Locale:
    - Added complete Russian translations (thanks SeptiSe7en on Crowdin!)
---------------------------------------------------------------------------------------------------
Version: 1.8.2
Date: 28 January 2022
  Minor Features:
    - Added "Player already contains a spidertron" warning when trying to quick-toggle a second spidertron
    - 'Shift + Q' (Spidertron remote pipette) now plays sound clearing the cursor
  Bugfixes:
    - Fixed crash when quick-toggling into a spidertron type that no longer exists (due to mods being changed or unloaded)
---------------------------------------------------------------------------------------------------
Version: 1.8.1
Date: 21 January 2022
  Features:
    - Spidertron pathfinder now navigates around Space Exploration's empty space
    - Improved pathfinder reliability to reduce incorrect no-paths
---------------------------------------------------------------------------------------------------
Version: 1.8.0
Date: 31 December 2021
  Features:
    - Added option to increase spidertron's size (disabled by default)
  Locale:
    - Added some German translations (thanks Linebeck on Crowdin!)
  Bugfixes:
    - Fixed incorrect lighting in Spidertron Patrol's spiderling
    - Fixed cursor not being cleared when using the remote pipette whilst holding a library blueprint