@@ -1,1 +1,2 @@
 require "prototypes.dummy-spidertron"
+require "prototypes.spidertron-remote"
