@@ -2,6 +2,7 @@
 spidertron-enhancements-use-alt-spidertron-remote=Order spidertron with pathfinder
 spidertron-enhancements-enter-vehicles=Toggle spidertron driving
 spidertron-enhancements-spidertron-pipette=Spidertron pipette tool
+spidertron-enhancements-spidertron-patrol-pipette=Spidertron patrol pipette tool
 spidertron-enhancements-open-vehicle-inventory=Open vehicle GUI
 spidertron-enhancements-recall-shortcut=Call last used spidertron
 
@@ -9,6 +10,7 @@ spidertron-enhancements-recall-shortcut=Call last used spidertron
 spidertron-enhancements-use-alt-spidertron-remote=Used with spidertron remote to order the connected spidertron using the pathfinder.
 spidertron-enhancements-enter-vehicles=Result depends on whether you are in/near a vehicle or not and can be configured in mod settings.\n[color=red]Do not set to the same as the vanilla control [font=default-bold]Enter/leave vehicle[/font] (__CONTROL__toggle-driving__)[/color].
 spidertron-enhancements-spidertron-pipette=Picks a remote from your inventory that is connected to the currently selected spidertron and places it in your cursor.\nIf no currently selected spidertron, picks a remote connected to the spidertron you are currently driving.
+spidertron-enhancements-spidertron-patrol-pipette=Only functional when Spidertron Patrols is installed.\nPicks a patrol remote from your inventory that is connected to the currently selected spidertron and places it in your cursor.\nIf no currently selected spidertron, picks a patrol remote connected to the spidertron you are currently driving.
 spidertron-enhancements-open-vehicle-inventory=If holding a spidertron remote, opens the inventory of the connected spidertron.\nOtherwise, opens the inventory of the vehicle you are currently driving.
 
 [shortcut-name]
